--- a/miniedytor.html
+++ b/miniedytor.html
@@ -7,6 +7,13 @@
     <title>Tablet Gutenberga</title>    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Suez+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -16,7 +23,9 @@
     <div class="container-fluid">
 
         <div class="header">
-            <img src="assets/banner.png">
+            <a href="http://brzoza.wzks.uj.edu.pl/~18_bien/aplikacja/">
+                <img src="assets/banner.png">
+            </a>
         </div>
         <div class="row d-flex header__menu">
             <div class="col-12 col-md-2 header__menu__item">
@@ -57,52 +66,55 @@
             <p></p>
 
             <form action="/praktyka.html">
-                <div class="praktyka__tekst">Typografia otacza nas na co dzień. Typografia otacza nas na co dzień. Typografia otacza nas na co dzień. Typografia otacza nas na co dzień.</div>
+                <div class="praktyka__tekst">
+                    <p>Typografia otacza nas na co dzień. Często nawet nie zdajemy sobie sprawy, jak bardzo użyty w danym tekście krój pisma wpływa na jego charakter i odbiór. Czasem kroje pisma są nośnikiem określonych znaczeń i emocji w równej mierze co słowa, które są nimi złożone.</p>
+                    <p>Aby pokazać Ci, jak kroje pisma mogą wpływać na recepcję tekstu, zapraszam Cię do małego eksperymentu. Wpisz w pole tekstowe poniżej dowolny tekst, a zobaczysz, jak diametralnie różnie on wygląda w zależności od kroju, którym został złożony. Ten sam tekst może jawić się jako dostojny i elegancki, chłodny i poważny lub też swobodny i dynamiczny – wszystko zależy od użytego fontu. Tak właśnie działa typografia! </p>
+                </div>                    
                 <input type="text" id="input" name="input" size="30" class="praktyka__input"><br><br>
             </form>
 
 
             <div class="row justify-content-between">
                 <div class="col-12 col-md-6 col-lg-3 praktyka__box">
-                    <h3 class="praktyka__font-name">Helvetica</h3>
+                    <h3 class="praktyka__font-name">Cinzel</h3>
                     <div class="praktyka__pole-tekstowe praktyka__pole-tekstowe--font1"></div>
-                    <div class="praktyka__caption">Geometryczność i minimalizm</div>
-                    <div class="praktyka__text">Font ten powstał</div>
+                    <div class="praktyka__caption">Tradycja i solidność</div>
+                    <div class="praktyka__text">Ten zaprojektowany przez portugalskiego typografa Natanaela Gamę krój jawnie odwołuje się do źródeł typografii – starożytnych inskrypcji rzymskich wykuwanych na kamieniu. <a href="https://fonts.google.com/specimen/Cinzel" target="_blank">Cinzel</a>, niczym kapitała kwadratowa, ma solidną, majestatyczną budowę, a zarazem niepozbawiona jest humanistycznego wdzięku i lekkości.</div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-3 praktyka__box">
-                    <h3 class="praktyka__font-name">Helvetica</h3>
+                    <h3 class="praktyka__font-name">Anton</h3>
                     <div class="praktyka__pole-tekstowe praktyka__pole-tekstowe--font2"></div>
-                    <div class="praktyka__caption">Geometryczność i minimalizm</div>
-                    <div class="praktyka__text">Font ten powstał</div>
+                    <div class="praktyka__caption">Akcydensowa krzyklikwość</div>
+                    <div class="praktyka__text">Stworzony przez Vernona Adamsa krój <a href="https://fonts.google.com/specimen/Anton" target="_blank">Anton</a> to nawiązanie do tradycyjnego liternictwa reklamowego przełomu XIX i XX wieku. Oryginalne inskrypcje na szyldach i reklamach zostały zdigitalizowane, a następnie przetworzono je na font. Krój ten jest idealny do stylizacji na stare akcydensy czy czasopisma, dobrze sprawdza się także w nagłówkach współczesnych tekstów.</div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-3 praktyka__box">
-                    <h3 class="praktyka__font-name">Helvetica</h3>
+                    <h3 class="praktyka__font-name">IBM Plex Mono</h3>
                     <div class="praktyka__pole-tekstowe praktyka__pole-tekstowe--font3"></div>
-                    <div class="praktyka__caption">Geometryczność i minimalizm</div>
-                    <div class="praktyka__text">Font ten powstał</div>
+                    <div class="praktyka__caption">Technika i komputeryzacja</div>
+                    <div class="praktyka__text"><a href="https://fonts.google.com/specimen/IBM+Plex+Mono" target="_blank">IBM Plex Mono</a> to krój zaprojektowany przez Mikke’a Abbinka. Ten mocno techniczny w swym charakterze, monospace’owy font miał oddać ducha i dziedzictwo firmy IBM, a jednocześnie ilustrować relację między człowiekiem a komputerem. Wydaje się, że cel został osiągnięty – krój, mimo mocno maszynowego charakteru, jest czytelny i przyjazny w odbiorze.</div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-3 praktyka__box">
-                    <h3 class="praktyka__font-name">Helvetica</h3>
+                    <h3 class="praktyka__font-name">Tangerine</h3>
                     <div class="praktyka__pole-tekstowe praktyka__pole-tekstowe--font4"></div>
-                    <div class="praktyka__caption">Geometryczność i minimalizm</div>
-                    <div class="praktyka__text">Font ten powstał</div>
+                    <div class="praktyka__caption">Delikatność i wdzięk</div>
+                    <div class="praktyka__text"><a href=" https://fonts.google.com/specimen/Tangerine" target="_blank">Tangerine</a> zaprojektował japoński typograf Toshi Omagari, który wzorował się na  włoskich kancelareskach z XVI i XVII wieku. Długie i dynamiczne linie wydłużeń górnych nadają krojowi gracji i lekkości. Należy go stosować do krótkich tekstów lub tytułów, gdyż w dłuższych partiach tekstu byłby mało czytelny.</div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-3 praktyka__box">
-                    <h3 class="praktyka__font-name">Helvetica</h3>
+                    <h3 class="praktyka__font-name">Prata</h3>
                     <div class="praktyka__pole-tekstowe praktyka__pole-tekstowe--font5"></div>
-                    <div class="praktyka__caption">Geometryczność i minimalizm</div>
-                    <div class="praktyka__text">Font ten powstał</div>
+                    <div class="praktyka__caption">Typograficzna elegancja</div>
+                    <div class="praktyka__text"><a href="https://fonts.google.com/specimen/Prata" target="_blank">Prata</a> to krój nawiązujący do XIX-wiecznych krojów romantycznych, tzw. didone. Jego cechami wyróżniającymi są duży kontrast, ostre zakończenia oraz łagodne zaokrąglenia. Składany nim tekst charakteryzuje się dużą elegancją.</div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-3 praktyka__box">
-                    <h3 class="praktyka__font-name">Helvetica</h3>
+                    <h3 class="praktyka__font-name">Righteous</h3>
                     <div class="praktyka__pole-tekstowe praktyka__pole-tekstowe--font6"></div>
-                    <div class="praktyka__caption">Geometryczność i minimalizm</div>
-                    <div class="praktyka__text">Font ten powstał</div>
+                    <div class="praktyka__caption">Oryginalność i plakatowość</div>
+                    <div class="praktyka__text"><a href="https://fonts.google.com/specimen/Righteous" target="_blank">Righteous</a> powstał na bazie liternictwa na plakatach węgierskiego malarza Róberta Berénya, utrzymanych w stylu art déco. Mimo geometryzacji i dużej grubości krój ten jest dobrze czytelny, a dzięki dużej oryginalności nadaje składanemu mu tekstowi unikatowego, niepodrabialnego charakteru.</div>
                 </div>
 
             </div>
