--- a/o-serwisie.html
+++ b/o-serwisie.html
@@ -7,6 +7,7 @@
     <title>Tablet Gutenberga</title>    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Suez+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -16,7 +17,9 @@
     <div class="container-fluid">
 
         <div class="header">
-            <img src="assets/banner.png">
+            <a href="http://brzoza.wzks.uj.edu.pl/~18_bien/aplikacja/">
+                <img src="assets/banner.png">
+            </a>
         </div>
         <div class="row d-flex header__menu">
             <div class="col-12 col-md-2 header__menu__item">
@@ -50,9 +53,29 @@
     </div>
 
 
-    <div class="container">
+    <div class="container container__small">
         <main>            
             <h2 class="o-serwisie__title">O serwisie</h2>
+            <p>Autorem niniejszego serwisu jest Agnieszka Bień. Serwis ten stanowi integralną część pracy licencjackiej (kierunek: Elektroniczne Przetwarzanie Informacji), przygotowanej pod kierunkiem prof. dr. hab. Jerzego Koniora na Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
+            <h3 class="o-serwisie__subtitle">Źródła</h3>
+            <p>Podczas tworzenia tekstów na niniejszy serwis korzystano z następujących źródeł:</p>
+            <ol>
+                <li>Bieńkowska B., Chamerska H., <em>Zarys dziejów książki</em>, Centrum Ustawicznego Kształcenia Bibliotekarzy i Wydawnictwo Spółdzielcze, Warszawa 1987.</li>
+                <li>Bringhurst R., <em>Elementarz stylu w typografii</em>, przeł. D. Dziewońska, d2d.pl, Kraków 2013.</li>
+                <li>Chwałowski R., <em>Błędy łamania, Dzielenie wyrazów</em>, Typografia.info, [online] <a href="https://typografia.info/podstawy/bledy-lamania">https://typografia.info/podstawy/bledy-lamania</a>; <a href="https://typografia.info/podstawy/dzielenie">https://typografia.info/podstawy/dzielenie</a>.</li>
+                <li><em>Designing Multiple Master Typefaces</em> [manual], Adobe Systems Incorporated, [online] <a href="https://partners.adobe.com/public/developer/en/font/5091.Design_MM_Fonts.pdf">https://partners.adobe.com/public/developer/en/font/5091.Design_MM_Fonts.pdf</a>.</li>
+                <li>Eisenstein E. L. <em>Rewolucja Gutenberga</em>, Prószyński i S-ka, Warszawa 2004.</li>
+                <li>Haralambous Y., <em>Parametrization of PostScript fonts through METAFONT — an alternative to Adobe Multiple Master fonts</em>, „Electronic Publishing” 1993, vol. 6 (3), p. 145–157, [online] <a href="https://www.academia.edu/29082046/Parametrization_of_PostScript_fonts_through_METAFONT_an _alternative_to_Adobe_Multiple_Master_fonts">https://www.academia.edu/29082046/Parametrization_of_PostScript_fonts_through_METAFONT_an _alternative_to_Adobe_Multiple_Master_fonts</a>.</li>
+                <li>Hudson J., <em>Introducing OpenType Variable Fonts</em>, [online] <a href="https://medium.com/variable-fonts/https-medium-com-tiro-introducing-opentype-variable-fonts 12ba6cd2369">https://medium.com/variable-fonts/https-medium-com-tiro-introducing-opentype-variable-fonts 12ba6cd2369</a>.</li>
+                <li>Noordzij G., <em>Kreska. Teoria pisma</em>, d2d.pl, Kraków 2014.</li>
+                <li>Pirożyński J., <em>Johannes Gutenberg i początki ery druku</em>, Wydawnictwo Naukowe PWN, Warszawa 2002.</li>
+                <li>Scaglione J., Meseguer L., Henestrosa C., <em>Jak projektować kroje pisma. Od szkicu do ekranu</em>, d2d.pl, Kraków 2013.</li>
+                <li>Sherman N., </em>Variable fonts for responsive design</em>, [online] <a href="https://alistapart.com/blog/post/variable-fonts-for-responsive-design?fbclid=IwAR2lOOWLjiZZrHO5kEykHZbPKKsUMVCiHMAyEAm4q Qf40_1tiMiDo8rbKqM">https://alistapart.com/blog/post/variable-fonts-for-responsive-design?fbclid=IwAR2lOOWLjiZZrHO5kEykHZbPKKsUMVCiHMAyEAm4q Qf40_1tiMiDo8rbKqM</a>.</li>
+                <li>Smeijers F., <em>Counterpunch: making type in the sixteenth century, designing typefaces now</em>, Hyphen Press, London 1996.</li>
+                <li>Tomaszewski A., <em>Architektura książki</em>, Centralny Ośrodek Badawczo-Rozwojowy Przemysłu Poligraficznego, Warszawa 2011.</li>
+                <li>Wolański A., <em>sieroty na końcu wiersza</em> [porada w Poradni Językowej PWN], [online] <a href="https://sjp.pwn.pl/poradnia/haslo/sieroty-na-koncu-wiersza;8893.html">https://sjp.pwn.pl/poradnia/haslo/sieroty-na-koncu-wiersza;8893.html</a>.</li>
+
+            </ol>
 
             <h3 class="o-serwisie__subtitle">Cel serwisu</h3>
             <div>Celem serwisu „Tablet Gutenberga” jest poszerzenie wiedzy jego użytkowników na temat typografii, ze szczególnym uwzględnieniem współczesnego kontekstu – typografii w środowisku cyfrowym i internetowym. Chciałabym zwrócić uwagę odbiorców na pojęcie typografii oraz na kwestie z nim związane, szczególnie zaś pragnę omówić przemiany typografii od powstania tej dziedziny po dzień dzisiejszy.</div>
